--- a/app/assets/stylesheets/components/header.css
+++ b/app/assets/stylesheets/components/header.css
@@ -4,7 +4,8 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 56px;
+  height: calc(56px + env(safe-area-inset-top, 0px));
+  padding-top: env(safe-area-inset-top, 0px);
   background-color: var(--bg-surface, #ffffff);
   border-bottom: 1px solid var(--color-off-white, #EBEDF7);
   z-index: 100;
